--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.6",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwind": "^2.2.12",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
