--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^12.9.0",
     "next": "16.1.6",
     "ol": "^10.7.0",
+    "pinata": "^2.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
