--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "cookies-next": "^6.1.1",
     "firebase": "^12.9.0",
     "next": "16.1.6",
     "ol": "^10.7.0",
